# 3laba_of_2course

./: CMakeLists.txt  Makefile  command  test_array  test_fbt  test_flist  test_hash  test_llist  test_queue  test_stack
GO_TEST_2_TASK/: coverage.html  coverage.out  for_debug_go_tasks  go.mod  main_test.go  queue.go
GO_realization_and_test/: 2_tasks_go.go  for_debug_go_tasks  go.mod  mymodule
coverage/: cmd_line  coverage.info  coverage_filtered.info  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/: array.h.func-c.html  array.h.func.html  array.h.gcov.html  fbt.h.func-c.html  fbt.h.func.html  fbt.h.gcov.html  flist.h.func-c.html  flist.h.func.html  flist.h.gcov.html  hash.h.func-c.html  hash.h.func.html  hash.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  llist.h.func-c.html  llist.h.func.html  llist.h.gcov.html  queue.h.func-c.html  queue.h.func.html  queue.h.gcov.html  stack.h.func-c.html  stack.h.func.html  stack.h.gcov.html
spec_for_ser_and_desser/: array  array.cpp  fbt  fbt.cpp  fllist  fllist.cpp  hash  hash.cpp  llist  llist.cpp  queue  queue.cpp  stack  stack.cpp
src/: array.h  fbt.h  flist.h  hash.h  library.h  llist.h  queue.h  stack.h
test/: test_array.cpp  test_array.gcda  test_array.gcno  test_fbt.cpp  test_fbt.gcda  test_fbt.gcno  test_flist.cpp  test_flist.gcda  test_flist.gcno  test_hash.cpp  test_hash.gcda  test_hash.gcno  test_llist.cpp  test_llist.gcda  test_llist.gcno  test_queue.cpp  test_queue.gcda  test_queue.gcno  test_stack.cpp  test_stack.gcda  test_stack.gcno
(+25 files in other folders)
